<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:check_button="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--타이틀-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_lock_settings"
        android:textColor="@color/text_dark_color"
        android:textSize="50sp"
        android:alpha="0.1"
        android:paddingTop="@dimen/activity_padding"
        android:paddingStart="@dimen/inner_padding"/>

    <!--내용-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_top_padding">

            <LinearLayout
                android:id="@+id/lock_settings_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_lock_type"
                    android:textSize="@dimen/text_semi_content_size"
                    android:textColor="@color/text_dark_color"
                    android:layout_marginStart="@dimen/activity_padding"/>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:paddingStart="@dimen/activity_padding"
                    android:paddingTop="@dimen/inner_padding"
                    android:paddingBottom="@dimen/activity_padding"
                    android:clipToPadding="false">

                    <nm.security.namooprotector.widget.CheckButton
                        android:id="@+id/lock_settings_type_pin_button"
                        android:layout_width="@dimen/check_button_length"
                        android:layout_height="@dimen/check_button_length"
                        style="@style/CheckButton"
                        check_button:checked="false"
                        check_button:image="@drawable/vector_pin"
                        check_button:description=""
                        check_button:title="@string/name_pin"/>

                    <nm.security.namooprotector.widget.CheckButton
                        android:id="@+id/lock_settings_type_pattern_button"
                        android:layout_width="@dimen/check_button_length"
                        android:layout_height="@dimen/check_button_length"
                        android:layout_marginStart="@dimen/space_padding"
                        style="@style/CheckButton"
                        check_button:checked="false"
                        check_button:image="@drawable/vector_pattern"
                        check_button:description=""
                        check_button:title="@string/name_pattern"/>

                    <nm.security.namooprotector.widget.CheckButton
                        android:id="@+id/lock_settings_type_fingerprint_button"
                        android:layout_width="@dimen/check_button_length"
                        android:layout_height="@dimen/check_button_length"
                        android:layout_marginTop="@dimen/space_padding"
                        style="@style/CheckButton"
                        check_button:checked="false"
                        check_button:image="@drawable/vector_fingerprint"
                        check_button:description=""
                        check_button:title="@string/name_fingerprint"/>

                </GridLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lock_settings_pin_settings_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_pin_settings"
                    android:textSize="@dimen/text_semi_content_size"
                    android:textColor="@color/text_dark_color"
                    android:layout_marginStart="@dimen/activity_padding"/>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:paddingStart="@dimen/activity_padding"
                    android:paddingTop="@dimen/inner_padding"
                    android:paddingBottom="@dimen/activity_padding"
                    android:clipToPadding="false">

                    <nm.security.namooprotector.widget.CheckButton
                        android:id="@+id/lock_settings_pin_settings_click_haptic_button"
                        android:layout_width="@dimen/check_button_length"
                        android:layout_height="@dimen/check_button_length"
                        style="@style/CheckButton"
                        check_button:checked="false"
                        check_button:image="@drawable/vector_haptic"
                        check_button:description=""
                        check_button:title="@string/name_click_haptic"/>

                    <nm.security.namooprotector.widget.CheckButton
                        android:id="@+id/lock_settings_pin_settings_hide_click_button"
                        android:layout_width="@dimen/check_button_length"
                        android:layout_height="@dimen/check_button_length"
                        android:layout_marginStart="@dimen/space_padding"
                        style="@style/CheckButton"
                        check_button:checked="false"
                        check_button:image="@drawable/vector_touch"
                        check_button:description=""
                        check_button:title="@string/name_hide_click"/>

                    <nm.security.namooprotector.widget.CheckButton
                        android:id="@+id/lock_settings_pin_settings_quick_unlock_button"
                        android:layout_width="@dimen/check_button_length"
                        android:layout_height="@dimen/check_button_length"
                        android:layout_marginTop="@dimen/space_padding"
                        style="@style/CheckButton"
                        check_button:checked="false"
                        check_button:image="@drawable/vector_unlock"
                        check_button:description=""
                        check_button:title="@string/name_quick_unlock"/>

                    <nm.security.namooprotector.widget.CheckButton
                        android:id="@+id/lock_settings_pin_settings_rearrange_key_button"
                        android:layout_width="@dimen/check_button_length"
                        android:layout_height="@dimen/check_button_length"
                        android:layout_marginTop="@dimen/space_padding"
                        android:layout_marginStart="@dimen/space_padding"
                        style="@style/CheckButton"
                        check_button:checked="false"
                        check_button:image="@drawable/vector_random"
                        check_button:description=""
                        check_button:title="@string/name_rearrange_key"/>

                    <nm.security.namooprotector.widget.CheckButton
                        android:id="@+id/lock_settings_pin_settings_light_key_button"
                        android:layout_width="@dimen/check_button_length"
                        android:layout_height="@dimen/check_button_length"
                        android:layout_marginTop="@dimen/space_padding"
                        style="@style/CheckButton"
                        check_button:checked="false"
                        check_button:image="@drawable/vector_light"
                        check_button:description=""
                        check_button:title="@string/name_light_key"/>

                </GridLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lock_settings_pattern_settings_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_pattern_settings"
                    android:textSize="@dimen/text_semi_content_size"
                    android:textColor="@color/text_dark_color"
                    android:layout_marginStart="@dimen/activity_padding"/>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:paddingStart="@dimen/activity_padding"
                    android:paddingTop="@dimen/inner_padding"
                    android:paddingBottom="@dimen/activity_padding"
                    android:clipToPadding="false">

                    <nm.security.namooprotector.widget.CheckButton
                        android:id="@+id/lock_settings_pattern_settings_draw_haptic_button"
                        android:layout_width="@dimen/check_button_length"
                        android:layout_height="@dimen/check_button_length"
                        style="@style/CheckButton"
                        check_button:checked="false"
                        check_button:image="@drawable/vector_haptic"
                        check_button:description=""
                        check_button:title="@string/name_draw_haptic"/>

                    <nm.security.namooprotector.widget.CheckButton
                        android:id="@+id/lock_settings_pattern_settings_hide_draw_button"
                        android:layout_width="@dimen/check_button_length"
                        android:layout_height="@dimen/check_button_length"
                        android:layout_marginStart="@dimen/space_padding"
                        style="@style/CheckButton"
                        check_button:checked="false"
                        check_button:image="@drawable/vector_draw"
                        check_button:description=""
                        check_button:title="@string/name_hide_draw"/>

                    <nm.security.namooprotector.widget.CheckButton
                        android:id="@+id/lock_settings_pattern_settings_light_dot_button"
                        android:layout_width="@dimen/check_button_length"
                        android:layout_height="@dimen/check_button_length"
                        android:layout_marginTop="@dimen/space_padding"
                        style="@style/CheckButton"
                        check_button:checked="false"
                        check_button:image="@drawable/vector_light"
                        check_button:description=""
                        check_button:title="@string/name_light_dot"/>

                </GridLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>