<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <!--타이틀-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/activity_padding"
            android:paddingEnd="@dimen/activity_padding"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_change_pin"
                android:textColor="@color/text_dark_color"
                android:textSize="@dimen/text_title_size"/>

            <ImageButton
                android:id="@+id/pin_execute_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/vector_check"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:tint="@color/text_dark_color"
                android:padding="@dimen/space_padding"
                android:visibility="invisible"
                android:onClick="execute"/>

        </LinearLayout>

        <!--내용-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/card_color"
                android:layout_marginStart="@dimen/activity_padding"
                android:layout_marginEnd="@dimen/activity_padding"
                android:layout_marginTop="@dimen/inner_padding"
                android:layout_marginBottom="@dimen/activity_padding"
                android:padding="20dp"
                android:gravity="center"
                android:elevation="@dimen/focus_elevation">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/pin_input_first"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alert_pin_new_password"
                        android:inputType="numberPassword"
                        android:textSize="@dimen/text_content_size"
                        android:textColor="@color/text_dark_color"
                        android:textColorHint="@color/text_semi_dark_color"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_padding">

                    <EditText
                        android:id="@+id/pin_input_second"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alert_pin_confirm_password"
                        android:inputType="numberPassword"
                        android:textSize="@dimen/text_content_size"
                        android:textColor="@color/text_dark_color"
                        android:textColorHint="@color/text_semi_dark_color"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/inner_padding"
                    android:text="@string/alert_pin_restrictions"
                    android:textColor="@color/text_dark_color"
                    android:textSize="@dimen/text_semi_content_size"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>